configure.mk and .d Makefile include directives
From this point forward, GNU make is required to build OpenSSL.

This was automatically applied by AddGnuIncludeDirectivesToMakefile() in:
https://code.google.com/p/mike-bland/source/browse/openssl/update_makefiles.py

Signed-off-by: Mike Bland <mbland@acm.org>

--- a/Makefile.fips
+++ b/Makefile.fips
@@ -3,6 +3,7 @@
 ##
 
 VERSION=fips-2.0-test
+include configure.mk
 MAJOR=
 MINOR=
 SHLIB_VERSION_NUMBER=
@@ -630,4 +631,5 @@ install_sw:
 	done;
 	@set -e; target=install; $(RECURSIVE_BUILD_CMD)
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
