--- a/crypto/camellia/Makefile
+++ b/crypto/camellia/Makefile
@@ -4,6 +4,7 @@
 
 DIR= camellia
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=	$(CC) -E
 INCLUDES=
@@ -86,6 +87,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 camellia.o: ../../include/openssl/opensslconf.h camellia.c camellia.h
