--- a/crypto/md2/Makefile
+++ b/crypto/md2/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	md2
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -72,6 +73,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 md2_dgst.o: ../../include/openssl/crypto.h ../../include/openssl/e_os2.h
