--- a/crypto/modes/Makefile
+++ b/crypto/modes/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	modes
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -106,6 +107,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 cbc128.o: ../../include/openssl/crypto.h ../../include/openssl/e_os2.h
