--- a/crypto/objects/Makefile
+++ b/crypto/objects/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	objects
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -85,6 +86,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 o_names.o: ../../include/openssl/asn1.h ../../include/openssl/bio.h
