--- a/crypto/pkcs12/Makefile
+++ b/crypto/pkcs12/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	pkcs12
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -78,6 +79,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 p12_add.o: ../../e_os.h ../../include/openssl/asn1.h
