--- a/crypto/rc4/Makefile
+++ b/crypto/rc4/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	rc4
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=    $(CC) -E
 INCLUDES=
@@ -100,6 +101,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 rc4_enc.o: ../../e_os.h ../../include/openssl/bio.h
