--- a/crypto/seed/Makefile
+++ b/crypto/seed/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	seed
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=	$(CC) -E
 INCLUDES=
@@ -73,6 +74,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 seed.o: ../../include/openssl/crypto.h ../../include/openssl/e_os2.h
