--- a/crypto/srp/Makefile
+++ b/crypto/srp/Makefile
@@ -1,5 +1,6 @@
 DIR=	srp
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -70,6 +71,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 srp_lib.o: ../../e_os.h ../../include/openssl/asn1.h
