--- a/crypto/ui/Makefile
+++ b/crypto/ui/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	ui
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -76,6 +77,7 @@ dclean:
 clean:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ui_compat.o: ../../include/openssl/e_os2.h ../../include/openssl/opensslconf.h
