--- a/crypto/whrlpool/Makefile
+++ b/crypto/whrlpool/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	whrlpool
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=	$(CC) -E
 INCLUDES=
@@ -85,6 +86,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 wp_block.o: ../../include/openssl/e_os2.h ../../include/openssl/opensslconf.h
