--- a/crypto/x509/Makefile
+++ b/crypto/x509/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	x509
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -82,6 +83,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 by_dir.o: ../../e_os.h ../../include/openssl/asn1.h ../../include/openssl/bio.h
