--- a/engines/ccgost/Makefile
+++ b/engines/ccgost/Makefile
@@ -1,5 +1,6 @@
 DIR=ccgost
 TOP=../..
+include $(TOP)/configure.mk
 CC=cc
 INCLUDES= -I../../include
 CFLAG=-g
@@ -89,6 +90,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff *.so *.sl *.dll *.dylib
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 gost2001.o: ../../include/openssl/asn1.h ../../include/openssl/asn1t.h
