--- a/fips/dsa/Makefile
+++ b/fips/dsa/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	dsa
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -85,6 +86,7 @@ dclean:
 
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_dsa_lib.o: ../../include/openssl/bio.h ../../include/openssl/bn.h
