--- a/fips/rand/Makefile
+++ b/fips/rand/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	rand
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -90,6 +91,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_drbg_ctr.o: ../../include/openssl/aes.h ../../include/openssl/asn1.h
