--- a/fips/sha/Makefile
+++ b/fips/sha/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	sha
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -115,6 +116,7 @@ dclean:
 clean:
 	rm -f *.o *.d asm/*.o *.obj lib tags core .pure .nfs* *.old *.bak fluff $(EXE)
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_sha1_selftest.o: ../../include/openssl/asn1.h ../../include/openssl/bio.h
