--- a/crypto/asn1/Makefile
+++ b/crypto/asn1/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	asn1
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -107,6 +108,7 @@ clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 a_bitstr.o: ../../e_os.h ../../include/openssl/asn1.h
