--- a/crypto/bn/Makefile
+++ b/crypto/bn/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	bn
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=    $(CC) -E
 INCLUDES= -I.. -I$(TOP) -I../../include
@@ -186,6 +187,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 bn_add.o: ../../e_os.h ../../include/openssl/bio.h ../../include/openssl/bn.h
