--- a/crypto/cast/Makefile
+++ b/crypto/cast/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	cast
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 CPP=	$(CC) -E
 INCLUDES=
@@ -80,6 +81,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 c_cfb64.o: ../../e_os.h ../../include/openssl/cast.h
