--- a/crypto/cms/Makefile
+++ b/crypto/cms/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	cms
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -78,6 +79,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 cms_asn1.o: ../../include/openssl/asn1.h ../../include/openssl/asn1t.h
