--- a/crypto/conf/Makefile
+++ b/crypto/conf/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	conf
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -75,6 +76,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 conf_api.o: ../../e_os.h ../../include/openssl/bio.h
