--- a/crypto/dso/Makefile
+++ b/crypto/dso/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	dso
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -74,6 +75,7 @@ dclean:
 clean:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 dso_beos.o: ../../e_os.h ../../include/openssl/bio.h
