--- a/crypto/ec/Makefile
+++ b/crypto/ec/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	ec
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -81,6 +82,7 @@ dclean:
 clean:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ec2_mult.o: ../../include/openssl/asn1.h ../../include/openssl/bio.h
