--- a/crypto/engine/Makefile
+++ b/crypto/engine/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	engine
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -82,6 +83,7 @@ dclean:
 clean:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 eng_all.o: ../../e_os.h ../../include/openssl/asn1.h
