--- a/crypto/evp/Makefile
+++ b/crypto/evp/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	evp
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -97,6 +98,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 bio_b64.o: ../../e_os.h ../../include/openssl/asn1.h
