--- a/crypto/lhash/Makefile
+++ b/crypto/lhash/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	lhash
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -72,6 +73,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 lh_stats.o: ../../e_os.h ../../include/openssl/bio.h
