--- a/crypto/md5/Makefile
+++ b/crypto/md5/Makefile
@@ -4,6 +4,7 @@
 
 DIR=    md5
 TOP=    ../..
+include $(TOP)/configure.mk
 CC=     cc
 CPP=    $(CC) -E
 INCLUDES=-I.. -I$(TOP) -I../../include
@@ -90,6 +91,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 md5_dgst.o: ../../include/openssl/e_os2.h ../../include/openssl/md5.h
