--- a/crypto/mdc2/Makefile
+++ b/crypto/mdc2/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	mdc2
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -72,6 +73,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 mdc2_one.o: ../../e_os.h ../../include/openssl/bio.h
