--- a/crypto/ocsp/Makefile
+++ b/crypto/ocsp/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	ocsp
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -75,6 +76,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ocsp_asn.o: ../../include/openssl/asn1.h ../../include/openssl/asn1t.h
