--- a/crypto/sha/Makefile
+++ b/crypto/sha/Makefile
@@ -4,6 +4,7 @@
 
 DIR=    sha
 TOP=    ../..
+include $(TOP)/configure.mk
 CC=     cc
 CPP=    $(CC) -E
 INCLUDES=
@@ -135,6 +136,7 @@ dclean:
 clean:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 sha1_one.o: ../../include/openssl/crypto.h ../../include/openssl/e_os2.h
