--- a/crypto/store/Makefile
+++ b/crypto/store/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	store
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I.. -I$(TOP) -I../../include
 CFLAG=-g
@@ -74,6 +75,7 @@ dclean:
 clean:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 str_err.o: ../../include/openssl/bio.h ../../include/openssl/crypto.h
