--- a/crypto/txt_db/Makefile
+++ b/crypto/txt_db/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	txt_db
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -72,6 +73,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 txt_db.o: ../../e_os.h ../../include/openssl/bio.h
