--- a/demos/engines/cluster_labs/Makefile
+++ b/demos/engines/cluster_labs/Makefile
@@ -97,6 +97,7 @@ depend:
 		rm -f Makefile.tmp Makefile
 		mv Makefile.new Makefile
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 rsaref.o: ../../../include/openssl/asn1.h ../../../include/openssl/bio.h
