--- a/fips/dh/Makefile
+++ b/fips/dh/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	dh
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -75,6 +76,7 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_dh_lib.o: ../../include/openssl/bio.h ../../include/openssl/bn.h
