--- a/fips/ecdsa/Makefile
+++ b/fips/ecdsa/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	ecdsa
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -74,6 +75,7 @@ dclean:
 
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_ecdsa_lib.o: ../../include/openssl/asn1.h ../../include/openssl/bio.h
