--- a/fips/rsa/Makefile
+++ b/fips/rsa/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	rsa
 TOP=	../..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES=
 CFLAG=-g
@@ -90,6 +91,7 @@ dclean:
 
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 fips_rsa_lib.o: ../../include/openssl/asn1.h ../../include/openssl/bio.h
