--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,6 +4,7 @@
 
 DIR=	tools
 TOP=	..
+include $(TOP)/configure.mk
 CC=	cc
 INCLUDES= -I$(TOP) -I../../include
 CFLAG=-g
@@ -54,4 +55,5 @@ dclean:
 clean:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
+-include $(SRC:.c=.d)
 # DO NOT DELETE THIS LINE -- make depend depends on it.
