--- a/crypto/aes/Makefile
+++ b/crypto/aes/Makefile
@@ -31,10 +31,12 @@ HEADER= aes_locl.h $(EXHEADER)
 
 ALL=    $(GENERAL) $(SRC) $(HEADER)
 
-top:
+top: top_crypto_aes
+top_crypto_aes:
 	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
 
-all:	lib
+all: all_crypto_aes
+all_crypto_aes:	lib
 
 lib:	$(LIBOBJ)
 	$(ARX) $(LIB) $(LIBOBJ)
@@ -94,15 +96,18 @@ aes-armv4.o:	aes-armv4.S
 bsaes-%.S:	asm/bsaes-%.pl;	$(PERL) $< $(PERLASM_SCHEME) $@
 bsaes-armv7.o:	bsaes-armv7.S
 
-files:
+files: files_crypto_aes
+files_crypto_aes:
 	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) "AES_ENC=$(AES_ENC)" Makefile >> $(TOP)/MINFO
 
-links:
+links: links_crypto_aes
+links_crypto_aes:
 	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
 	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
 	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
 
-install:
+install: install_crypto_aes
+install_crypto_aes:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
 	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
 	do  \
@@ -110,17 +115,22 @@ install:
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
 	done;
 
-tags:
+tags: tags_crypto_aes
+tags_crypto_aes:
 	ctags $(SRC)
 
-tests:
+tests: tests_crypto_aes
+tests_crypto_aes:
 
-lint:
+lint: lint_crypto_aes
+lint_crypto_aes:
 	lint -DLINT $(INCLUDES) $(SRC)>fluff
 
-dclean:
+dclean: dclean_crypto_aes
+dclean_crypto_aes:
 
-clean:
+clean: clean_crypto_aes
+clean_crypto_aes:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 -include $(SRC:.c=.d)
