--- a/crypto/bn/Makefile
+++ b/crypto/bn/Makefile
@@ -37,10 +37,12 @@ HEADER=	bn_lcl.h bn_prime.h $(EXHEADER)
 
 ALL=    $(GENERAL) $(SRC) $(HEADER)
 
-top:
+top: top_crypto_bn
+top_crypto_bn:
 	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
 
-all:	lib
+all: all_crypto_bn
+all_crypto_bn:	lib
 
 bn_prime.h: bn_prime.pl
 	$(PERL) bn_prime.pl >bn_prime.h
@@ -143,15 +145,18 @@ alpha-mont.s:	asm/alpha-mont.pl
 armv4-mont.o:	armv4-mont.S
 armv4-gf2m.o:	armv4-gf2m.S
 
-files:
+files: files_crypto_bn
+files_crypto_bn:
 	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
 
-links:
+links: links_crypto_bn
+links_crypto_bn:
 	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
 	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
 	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
 
-install:
+install: install_crypto_bn
+install_crypto_bn:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
 	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
 	do  \
@@ -163,17 +168,22 @@ div:
 	rm -f a.out
 	gcc -I.. -g div.c ../../libcrypto.a
 
-tags:
+tags: tags_crypto_bn
+tags_crypto_bn:
 	ctags $(SRC)
 
-tests:
+tests: tests_crypto_bn
+tests_crypto_bn:
 
-lint:
+lint: lint_crypto_bn
+lint_crypto_bn:
 	lint -DLINT $(INCLUDES) $(SRC)>fluff
 
-dclean:
+dclean: dclean_crypto_bn
+dclean_crypto_bn:
 
-clean:
+clean: clean_crypto_bn
+clean_crypto_bn:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 -include $(SRC:.c=.d)
