--- a/crypto/jpake/Makefile
+++ b/crypto/jpake/Makefile
@@ -12,21 +12,25 @@ SRC= $(LIBSRC)
 EXHEADER=jpake.h
 TEST=jpaketest.c
 
-top:
+top: top_crypto_jpake
+top_crypto_jpake:
 	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
 
-all:	lib
+all: all_crypto_jpake
+all_crypto_jpake:	lib
 
 lib:	$(LIBOBJ)
 	$(ARX) $(LIB) $(LIBOBJ)
 	$(RANLIB) $(LIB) || echo Never mind.
 	@touch lib
 
-links:
+links: links_crypto_jpake
+links_crypto_jpake:
 	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
 	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
 
-install:
+install: install_crypto_jpake
+install_crypto_jpake:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
 	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
 	do  \
@@ -34,9 +38,11 @@ install:
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
 	done;
 
-dclean:
+dclean: dclean_crypto_jpake
+dclean_crypto_jpake:
 
-clean:
+clean: clean_crypto_jpake
+clean_crypto_jpake:
 	rm -f *.s *.o *.d *.obj des lib tags core .pure .nfs* *.old *.bak fluff
 
 -include $(SRC:.c=.d)
