--- a/crypto/rc4/Makefile
+++ b/crypto/rc4/Makefile
@@ -28,10 +28,12 @@ HEADER=	$(EXHEADER) rc4_locl.h
 
 ALL=    $(GENERAL) $(SRC) $(HEADER)
 
-top:
+top: top_crypto_rc4
+top_crypto_rc4:
 	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
 
-all:	lib
+all: all_crypto_rc4
+all_crypto_rc4:	lib
 
 lib:	$(LIBOBJ)
 	$(ARX) $(LIB) $(LIBOBJ)
@@ -62,15 +64,18 @@ rc4-ia64.s: rc4-ia64.S
 # GNU make "catch all"
 rc4-%.s:	asm/rc4-%.pl;	$(PERL) $< $(PERLASM_SCHEME) $@
 
-files:
+files: files_crypto_rc4
+files_crypto_rc4:
 	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
 
-links:
+links: links_crypto_rc4
+links_crypto_rc4:
 	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
 	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
 	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
 
-install:
+install: install_crypto_rc4
+install_crypto_rc4:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
 	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
 	do  \
@@ -78,17 +83,22 @@ install:
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
 	done;
 
-tags:
+tags: tags_crypto_rc4
+tags_crypto_rc4:
 	ctags $(SRC)
 
-tests:
+tests: tests_crypto_rc4
+tests_crypto_rc4:
 
-lint:
+lint: lint_crypto_rc4
+lint_crypto_rc4:
 	lint -DLINT $(INCLUDES) $(SRC)>fluff
 
-dclean:
+dclean: dclean_crypto_rc4
+dclean_crypto_rc4:
 
-clean:
+clean: clean_crypto_rc4
+clean_crypto_rc4:
 	rm -f *.s *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 -include $(SRC:.c=.d)
