--- a/crypto/srp/Makefile
+++ b/crypto/srp/Makefile
@@ -18,25 +18,30 @@ SRC= $(LIBSRC)
 EXHEADER= srp.h
 HEADER=	$(EXHEADER)
 
-top:
+top: top_crypto_srp
+top_crypto_srp:
 	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
 
-all:	lib
+all: all_crypto_srp
+all_crypto_srp:	lib
 
 lib:	$(LIBOBJ)
 	$(AR) $(LIB) $(LIBOBJ)
 	$(RANLIB) $(LIB) || echo Never mind.
 	@touch lib
 
-files:
+files: files_crypto_srp
+files_crypto_srp:
 	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
 
-links:
+links: links_crypto_srp
+links_crypto_srp:
 	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
 	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
 	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
 
-install:
+install: install_crypto_srp
+install_crypto_srp:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
 	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
 	do  \
@@ -44,17 +49,22 @@ install:
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
 	done;
 
-tags:
+tags: tags_crypto_srp
+tags_crypto_srp:
 	ctags $(SRC)
 
-tests:
+tests: tests_crypto_srp
+tests_crypto_srp:
 
-lint:
+lint: lint_crypto_srp
+lint_crypto_srp:
 	lint -DLINT $(INCLUDES) $(SRC)>fluff
 
-dclean:
+dclean: dclean_crypto_srp
+dclean_crypto_srp:
 
-clean:
+clean: clean_crypto_srp
+clean_crypto_srp:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 -include $(SRC:.c=.d)
