Local Makefile var names and suffix targets
This is in preparation for including all subdirectory Makefiles in a top-level
Makefile. This will avoid multiply-defined variables that override each other
when the Makefiles are included together. This maintains compatibility with
the existing recursive make structure by replacing the original targets with
recipe-free targets that only depend on the Makefile-local targets.

I compared the build logs from these changes with logs from a clean branch,
for GNU make and GitMake, and they all matched as expected. (GitMake will now
build fips_test_suite regardless, but 'GitMake test' will not execute it.)

The $(APPS) line of the "links" target in crypto/Makefile was removed
manually. The remainder of the change was automatically applied by
UpdateVariableNames(), EmitSuffixTargetRules(), and UpdateRecursiveMakeArgs()
in:
https://code.google.com/p/mike-bland/source/browse/openssl/update_makefiles.py

Signed-off-by: Mike Bland <mbland@acm.org>

--- a/crypto/jpake/Makefile
+++ b/crypto/jpake/Makefile
@@ -1,38 +1,38 @@
-DIR=jpake
-TOP=../..
-include $(TOP)/configure.mk
+DIR_crypto_jpake=jpake
+TOP_crypto_jpake=../..
+include $(TOP_crypto_jpake)/configure.mk
 
-CFLAGS= $(INCLUDES) $(CFLAG)
+CFLAGS_crypto_jpake= $(INCLUDES) $(CFLAG)
 
-LIB=$(TOP)/libcrypto.a
-LIBOBJ=jpake.o jpake_err.o
-LIBSRC=jpake.c jpake_err.c
-SRC= $(LIBSRC)
+LIB_crypto_jpake=$(TOP_crypto_jpake)/libcrypto.a
+LIBOBJ_crypto_jpake=jpake.o jpake_err.o
+LIBSRC_crypto_jpake=jpake.c jpake_err.c
+SRC_crypto_jpake= $(LIBSRC_crypto_jpake)
 
-EXHEADER=jpake.h
-TEST=jpaketest.c
+EXHEADER_crypto_jpake=jpake.h
+TEST_crypto_jpake=jpaketest.c
 
 top: top_crypto_jpake
 top_crypto_jpake:
-	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
+	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR_crypto_jpake) sub_all)
 
 all: all_crypto_jpake
 all_crypto_jpake:	lib
 
-lib:	$(LIBOBJ)
-	$(ARX) $(LIB) $(LIBOBJ)
-	$(RANLIB) $(LIB) || echo Never mind.
+lib:	$(LIBOBJ_crypto_jpake)
+	$(ARX) $(LIB_crypto_jpake) $(LIBOBJ_crypto_jpake)
+	$(RANLIB) $(LIB_crypto_jpake) || echo Never mind.
 	@touch lib
 
 links: links_crypto_jpake
 links_crypto_jpake:
-	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
-	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
+	@$(PERL) $(TOP_crypto_jpake)/util/mklink.pl ../../include/openssl $(EXHEADER_crypto_jpake)
+	@$(PERL) $(TOP_crypto_jpake)/util/mklink.pl ../../test $(TEST_crypto_jpake)
 
 install: install_crypto_jpake
 install_crypto_jpake:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
-	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
+	@headerlist="$(EXHEADER_crypto_jpake)"; for i in $$headerlist ; \
 	do  \
 	(cp $$i $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i; \
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
@@ -45,4 +45,7 @@ clean: clean_crypto_jpake
 clean_crypto_jpake:
 	rm -f *.s *.o *.d *.obj des lib tags core .pure .nfs* *.old *.bak fluff
 
--include $(SRC:.c=.d)
+-include $(SRC_crypto_jpake:.c=.d)
+
+.c.o:
+	$(CC) $(CFLAGS_crypto_jpake) $(CPPFLAGS) -c -o $@ $<
