--- a/crypto/mdc2/Makefile
+++ b/crypto/mdc2/Makefile
@@ -2,54 +2,54 @@
 # OpenSSL/crypto/mdc2/Makefile
 #
 
-DIR=	mdc2
-TOP=	../..
-include $(TOP)/configure.mk
-INCLUDES=
+DIR_crypto_mdc2=	mdc2
+TOP_crypto_mdc2=	../..
+include $(TOP_crypto_mdc2)/configure.mk
+INCLUDES_crypto_mdc2=
 
-CFLAGS= $(INCLUDES) $(CFLAG)
+CFLAGS_crypto_mdc2= $(INCLUDES_crypto_mdc2) $(CFLAG)
 
-GENERAL=Makefile
-TEST= mdc2test.c
-APPS=
+GENERAL_crypto_mdc2=Makefile
+TEST_crypto_mdc2= mdc2test.c
+APPS_crypto_mdc2=
 
-LIB=$(TOP)/libcrypto.a
-LIBSRC=mdc2dgst.c mdc2_one.c
-LIBOBJ=mdc2dgst.o mdc2_one.o
+LIB_crypto_mdc2=$(TOP_crypto_mdc2)/libcrypto.a
+LIBSRC_crypto_mdc2=mdc2dgst.c mdc2_one.c
+LIBOBJ_crypto_mdc2=mdc2dgst.o mdc2_one.o
 
-SRC= $(LIBSRC)
+SRC_crypto_mdc2= $(LIBSRC_crypto_mdc2)
 
-EXHEADER= mdc2.h
-HEADER=	$(EXHEADER)
+EXHEADER_crypto_mdc2= mdc2.h
+HEADER_crypto_mdc2=	$(EXHEADER_crypto_mdc2)
 
-ALL=    $(GENERAL) $(SRC) $(HEADER)
+ALL_crypto_mdc2=    $(GENERAL_crypto_mdc2) $(SRC_crypto_mdc2) $(HEADER_crypto_mdc2)
 
 top: top_crypto_mdc2
 top_crypto_mdc2:
-	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
+	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR_crypto_mdc2) sub_all)
 
 all: all_crypto_mdc2
 all_crypto_mdc2:	lib
 
-lib:	$(LIBOBJ)
-	$(ARX) $(LIB) $(LIBOBJ)
-	$(RANLIB) $(LIB) || echo Never mind.
+lib:	$(LIBOBJ_crypto_mdc2)
+	$(ARX) $(LIB_crypto_mdc2) $(LIBOBJ_crypto_mdc2)
+	$(RANLIB) $(LIB_crypto_mdc2) || echo Never mind.
 	@touch lib
 
 files: files_crypto_mdc2
 files_crypto_mdc2:
-	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
+	$(PERL) $(TOP_crypto_mdc2)/util/files.pl TOP=$(TOP_crypto_mdc2) Makefile >> $(TOP_crypto_mdc2)/MINFO
 
 links: links_crypto_mdc2
 links_crypto_mdc2:
-	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
-	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
-	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
+	@$(PERL) $(TOP_crypto_mdc2)/util/mklink.pl ../../include/openssl $(EXHEADER_crypto_mdc2)
+	@$(PERL) $(TOP_crypto_mdc2)/util/mklink.pl ../../test $(TEST_crypto_mdc2)
+	@$(PERL) $(TOP_crypto_mdc2)/util/mklink.pl ../../apps $(APPS_crypto_mdc2)
 
 install: install_crypto_mdc2
 install_crypto_mdc2:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
-	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
+	@headerlist="$(EXHEADER_crypto_mdc2)"; for i in $$headerlist ; \
 	do  \
 	(cp $$i $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i; \
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
@@ -57,14 +57,14 @@ install_crypto_mdc2:
 
 tags: tags_crypto_mdc2
 tags_crypto_mdc2:
-	ctags $(SRC)
+	ctags $(SRC_crypto_mdc2)
 
 tests: tests_crypto_mdc2
 tests_crypto_mdc2:
 
 lint: lint_crypto_mdc2
 lint_crypto_mdc2:
-	lint -DLINT $(INCLUDES) $(SRC)>fluff
+	lint -DLINT $(INCLUDES_crypto_mdc2) $(SRC_crypto_mdc2)>fluff
 
 dclean: dclean_crypto_mdc2
 dclean_crypto_mdc2:
@@ -73,4 +73,7 @@ clean: clean_crypto_mdc2
 clean_crypto_mdc2:
 	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
--include $(SRC:.c=.d)
+-include $(SRC_crypto_mdc2:.c=.d)
+
+.c.o:
+	$(CC) $(CFLAGS_crypto_mdc2) $(CPPFLAGS) -c -o $@ $<
