--- a/crypto/ui/Makefile
+++ b/crypto/ui/Makefile
@@ -2,58 +2,58 @@
 # OpenSSL/crypto/ui/Makefile
 #
 
-DIR=	ui
-TOP=	../..
-include $(TOP)/configure.mk
-INCLUDES= -I.. -I$(TOP) -I../../include
+DIR_crypto_ui=	ui
+TOP_crypto_ui=	../..
+include $(TOP_crypto_ui)/configure.mk
+INCLUDES_crypto_ui= -I.. -I$(TOP_crypto_ui) -I../../include
 
-CFLAGS= $(INCLUDES) $(CFLAG)
+CFLAGS_crypto_ui= $(INCLUDES_crypto_ui) $(CFLAG)
 
-GENERAL=Makefile
+GENERAL_crypto_ui=Makefile
 #TEST= uitest.c
-TEST=
-APPS=
+TEST_crypto_ui=
+APPS_crypto_ui=
 
 COMPATSRC= ui_compat.c
 COMPATOBJ= ui_compat.o
 
-LIB=$(TOP)/libcrypto.a
-LIBSRC= ui_err.c ui_lib.c ui_openssl.c ui_util.c $(COMPATSRC)
-LIBOBJ= ui_err.o ui_lib.o ui_openssl.o ui_util.o $(COMPATOBJ)
+LIB_crypto_ui=$(TOP_crypto_ui)/libcrypto.a
+LIBSRC_crypto_ui= ui_err.c ui_lib.c ui_openssl.c ui_util.c $(COMPATSRC)
+LIBOBJ_crypto_ui= ui_err.o ui_lib.o ui_openssl.o ui_util.o $(COMPATOBJ)
 
-SRC= $(LIBSRC)
+SRC_crypto_ui= $(LIBSRC_crypto_ui)
 
-EXHEADER= ui.h ui_compat.h
-HEADER=	$(EXHEADER) ui_locl.h
+EXHEADER_crypto_ui= ui.h ui_compat.h
+HEADER_crypto_ui=	$(EXHEADER_crypto_ui) ui_locl.h
 
-ALL=    $(GENERAL) $(SRC) $(HEADER)
+ALL_crypto_ui=    $(GENERAL_crypto_ui) $(SRC_crypto_ui) $(HEADER_crypto_ui)
 
 top: top_crypto_ui
 top_crypto_ui:
-	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR) sub_all)
+	(cd ../..; $(MAKE) DIRS=crypto SDIRS=$(DIR_crypto_ui) sub_all)
 
 all: all_crypto_ui
 all_crypto_ui:	lib
 
-lib:	$(LIBOBJ)
-	$(ARX) $(LIB) $(LIBOBJ)
-	$(RANLIB) $(LIB) || echo Never mind.
+lib:	$(LIBOBJ_crypto_ui)
+	$(ARX) $(LIB_crypto_ui) $(LIBOBJ_crypto_ui)
+	$(RANLIB) $(LIB_crypto_ui) || echo Never mind.
 	@touch lib
 
 files: files_crypto_ui
 files_crypto_ui:
-	$(PERL) $(TOP)/util/files.pl TOP=$(TOP) Makefile >> $(TOP)/MINFO
+	$(PERL) $(TOP_crypto_ui)/util/files.pl TOP=$(TOP_crypto_ui) Makefile >> $(TOP_crypto_ui)/MINFO
 
 links: links_crypto_ui
 links_crypto_ui:
-	@$(PERL) $(TOP)/util/mklink.pl ../../include/openssl $(EXHEADER)
-	@$(PERL) $(TOP)/util/mklink.pl ../../test $(TEST)
-	@$(PERL) $(TOP)/util/mklink.pl ../../apps $(APPS)
+	@$(PERL) $(TOP_crypto_ui)/util/mklink.pl ../../include/openssl $(EXHEADER_crypto_ui)
+	@$(PERL) $(TOP_crypto_ui)/util/mklink.pl ../../test $(TEST_crypto_ui)
+	@$(PERL) $(TOP_crypto_ui)/util/mklink.pl ../../apps $(APPS_crypto_ui)
 
 install: install_crypto_ui
 install_crypto_ui:
 	@[ -n "$(INSTALLTOP)" ] # should be set by top Makefile...
-	@headerlist="$(EXHEADER)"; for i in $$headerlist ; \
+	@headerlist="$(EXHEADER_crypto_ui)"; for i in $$headerlist ; \
 	do  \
 	(cp $$i $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i; \
 	chmod 644 $(INSTALL_PREFIX)$(INSTALLTOP)/include/openssl/$$i ); \
@@ -61,14 +61,14 @@ install_crypto_ui:
 
 tags: tags_crypto_ui
 tags_crypto_ui:
-	ctags $(SRC)
+	ctags $(SRC_crypto_ui)
 
 tests: tests_crypto_ui
 tests_crypto_ui:
 
 lint: lint_crypto_ui
 lint_crypto_ui:
-	lint -DLINT $(INCLUDES) $(SRC)>fluff
+	lint -DLINT $(INCLUDES_crypto_ui) $(SRC_crypto_ui)>fluff
 
 dclean: dclean_crypto_ui
 dclean_crypto_ui:
@@ -77,4 +77,7 @@ clean: clean_crypto_ui
 clean_crypto_ui:
 	rm -f *.o *.d */*.o */*.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
--include $(SRC:.c=.d)
+-include $(SRC_crypto_ui:.c=.d)
+
+.c.o:
+	$(CC) $(CFLAGS_crypto_ui) $(CPPFLAGS) -c -o $@ $<
