--- a/demos/easy_tls/Makefile
+++ b/demos/easy_tls/Makefile
@@ -103,9 +103,9 @@ EXTRACFLAGS=-DTLS_APP=\"test.h\"
 #
 # The rest shouldn't need to be touched.
 #
-LDFLAGS=$(SYSLIBS) $(OPENSSLLIBS)
-INCLUDES=$(OPENSSLINCLUDES)
-CFLAGS=$(SYSCFLAGS) $(EXTRACFLAGS) $(INCLUDES)
+LDFLAGS_demos_easy_tls=$(SYSLIBS) $(OPENSSLLIBS)
+INCLUDES_demos_easy_tls=$(OPENSSLINCLUDES)
+CFLAGS_demos_easy_tls=$(SYSCFLAGS) $(EXTRACFLAGS) $(INCLUDES_demos_easy_tls)
 
 OBJS=easy-tls.o test.o
 
@@ -118,7 +118,10 @@ clean_demos_easy_tls:
 
 test: test_demos_easy_tls
 test_demos_easy_tls: $(OBJS)
-	$(CC) $(OBJS) $(LDFLAGS) -o test
+	$(CC) $(OBJS) $(LDFLAGS_demos_easy_tls) -o test
 
 test.o: $(HEADERS)
 easy-tls.o: $(HEADERS)
+
+.c.o:
+	$(CC) $(CFLAGS_demos_easy_tls) $(CPPFLAGS) -c -o $@ $<
