Conditional inclusion of fips_standalone_sha1.mk
This change preserves the existing behavior and output of the existing
recursive make structure, but ensures that when the
single-makefile-with-includes structure kicks in, only one definition for the
fips/fips_standalone_sha1 target will be defined.

Signed-off-by: Mike Bland <mbland@acm.org>

--- a/fips/Makefile
+++ b/fips/Makefile
@@ -121,7 +121,11 @@ fips_premain_dso$(EXE_EXT): fips_premain.c
 	$(CC) $(CFLAGS_fips) -DFINGERPRINT_PREMAIN_DSO_LOAD -o $@ fips_premain.c \
 		$(FIPSLIBDIR)fipscanister.o ../libcrypto.a $(EX_LIBS)
 
+ifdef FIPSCANISTERONLY
+else ifndef FIPSLIBDIR
+else
 include fips_standalone_sha1.mk
+endif
 
 subdirs: subdirs_fips
 subdirs_fips:
